
add_executable(
    r_http_ut
    include/framework.h
    source/framework.cpp
    include/test_r_http.h
    source/test_r_http.cpp
)

if(MSVC)
    target_link_options(r_http_ut PUBLIC "/STACK:10000000")
endif()

target_include_directories(
    r_http_ut PUBLIC 
    include
)
target_link_libraries(
    r_http_ut LINK_PUBLIC 
    r_http
    r_utils
)
if(CMAKE_SYSTEM MATCHES "Linux-")
    target_link_libraries(
        r_http_ut PUBLIC
        pthread
        dl
        uuid
    )
elseif(CMAKE_SYSTEM MATCHES "Windows")
endif(CMAKE_SYSTEM MATCHES "Linux-")
